some changes on login.html

--- a/www/templates/favorites.html
+++ b/www/templates/favorites.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
 <ion-view title="Favorites" id="page7">
   <ion-content padding="true" class="has-header">
     <div id="favorites-button-bar2" class="button-bar">
@@ -7,7 +10,8 @@
     <ion-list id="favorites-list4">
       <ion-item class="item-thumbnail-left" id="favorites-list-item10" ui-sref="tabsController.book()">
         <img src="img/a98arhS32mJso5ivgWuQ_paris.png">
-        <h2>Paris, France</h2>
+        <h3>From: Paris, France</h3>
+        <h3>To: Paris, France</h3>        
       </ion-item>
       <ion-item class="item-thumbnail-left" id="favorites-list-item11" ui-sref="tabsController.book()">
         <img src="img/t4XUprvSCS4CnwJHcxS6_spain.jpg">
