--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,7 +12,7 @@
     </form>
     <a ui-sref="tabsController.book()" id="login-button14" class="button button-positive button-block">Login</a>
     <div id="login-markdown1" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#000000;">Sign up now • Forgot Password </p>
+      <p style="color:#000000;"><a href="url">Sign up now </a>• <a href="url">Forgot Password </a> </p>
     </div>
   </ion-content>
 </ion-view>
