finished login, changed criarConta, started favor

--- a/www/templates/book.html
+++ b/www/templates/book.html
@@ -5,11 +5,11 @@
     </div>
     <form id="book-form5" class="list">
       <label class="item item-input" id="book-search2" name="book-from">
-        <i class="icon ion-search placeholder-icon"></i>
+        <i class="icon ion-plane placeholder-icon"></i>
         <input type="search" placeholder="From">
       </label>
       <label class="item item-input" id="book-search3" name="book-to">
-        <i class="icon ion-search placeholder-icon"></i>
+        <i class="icon ion-plane placeholder-icon"></i>
         <input type="search" placeholder="To">
       </label>
       <ion-checkbox id="book-checkbox1">Round Trip</ion-checkbox>
