--- a/www/templates/criarConta.html
+++ b/www/templates/criarConta.html
@@ -29,7 +29,7 @@
         <input type="password" placeholder="Confirmar Palavra-Passe">
       </label>
       <button id="criarConta-button13" class="button button-positive button-block">Criar Conta</button>
-      <button id="criarConta-button10" class="button button-stable button-block">Cancelar</button>
+      <button ui-sref="tabsController.login()" id="criarConta-button10" class="button button-stable button-block">Cancelar</button>
     </form>
   </ion-content>
 </ion-view>
