--- a/www/templates/favorites.html
+++ b/www/templates/favorites.html
@@ -8,16 +8,18 @@
       <button id="favorites-button12" class="button button-stable button-small button-block">Favorites</button>
     </div>
     <ion-list id="favorites-list4">
-      <ion-item class="item-thumbnail-left" id="favorites-list-item10" ui-sref="tabsController.book()">
+      <ion-item class="item-thumbnail-right" id="favorites-list-item10" ui-sref="tabsController.book()">
         <img src="img/a98arhS32mJso5ivgWuQ_paris.png">
         <h3>From: Paris, France</h3>
-        <h3>To: Paris, France</h3>        
+        <h3>To: Paris, France</h3>   
+        <ion-icon name="heart"></ion-icon> 
+        <ion-icon name="star"></ion-icon>   
       </ion-item>
-      <ion-item class="item-thumbnail-left" id="favorites-list-item11" ui-sref="tabsController.book()">
+      <ion-item class="item-thumbnail-right" id="favorites-list-item11" ui-sref="tabsController.book()">
         <img src="img/t4XUprvSCS4CnwJHcxS6_spain.jpg">
         <h2>Madrid, Spain</h2>
       </ion-item>
-      <ion-item class="item-thumbnail-left" id="favorites-list-item12" ui-sref="tabsController.book()">
+      <ion-item class="item-thumbnail-right" id="favorites-list-item12" ui-sref="tabsController.book()">
         <img src="img/ezuEFpNZSHyYVhCa9l9u_poland.webp">
         <h2>Warsaw, Poland</h2>
       </ion-item>
