--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -8,10 +8,12 @@
       <label class="item item-input" id="login-input20">
         <input type="password" placeholder="Palavra-Passe">
       </label>
-      <ion-checkbox id="login-checkbox2">Remember me?</ion-checkbox>
+      <label style="font-size: 12px;">
+        <ion-checkbox class="checkbox-square" id="login-checkbox2" style="border: 0cm; top: 5px;">Remember me?</ion-checkbox>
+      </label>
     </form>
     <a ui-sref="tabsController.book()" id="login-button14" class="button button-positive button-block">Login</a>
     <div id="login-markdown1" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#000000;"><a href="index.html#/page1/page9">Sign up now </a>•<a href="#">Forgot Password </a> </p>
+      <p style="color:#000000;"><a href="index.html#/page1/page9">Sign up now </a>• <a href="#">Forgot Password </a> </p>
   </ion-content>
 </ion-view>
