added logos, changed ionic.css

--- a/www/templates/favorites.html
+++ b/www/templates/favorites.html
@@ -1,6 +1,3 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
 <ion-view title="Favorites" id="page7">
   <ion-content padding="true" class="has-header">
     <div id="favorites-button-bar2" class="button-bar">
@@ -9,18 +6,18 @@
     </div>
     <ion-list id="favorites-list4">
       <ion-item class="item-thumbnail-right" id="favorites-list-item10" ui-sref="tabsController.book()">
-        <img src="img/a98arhS32mJso5ivgWuQ_paris.png">
+        <img src="img/TAP_Portugal_Logo.svg.png">
         <h3>From: Paris, France</h3>
         <h3>To: Paris, France</h3>   
         <ion-icon name="heart"></ion-icon> 
         <ion-icon name="star"></ion-icon>   
       </ion-item>
       <ion-item class="item-thumbnail-right" id="favorites-list-item11" ui-sref="tabsController.book()">
-        <img src="img/t4XUprvSCS4CnwJHcxS6_spain.jpg">
+        <img src="img/Transavia_logo.svg.png">
         <h2>Madrid, Spain</h2>
       </ion-item>
       <ion-item class="item-thumbnail-right" id="favorites-list-item12" ui-sref="tabsController.book()">
-        <img src="img/ezuEFpNZSHyYVhCa9l9u_poland.webp">
+        <img src="img/sata.png">
         <h2>Warsaw, Poland</h2>
       </ion-item>
     </ion-list>
