--- a/www/lib/ionic/css/ionic.css
+++ b/www/lib/ionic/css/ionic.css
@@ -6374,7 +6374,7 @@ button.item.item-button-right {
     max-width: 80px;
     max-height: 80px;
     width: 100%;
-    height: 100%; }
+    height: 40px; }
 
 .item-avatar-right.item-complex,
 .item-thumbnail-right.item-complex {
