--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -1,3 +1,25 @@
+<style>
+  #searchFlight-list-item19{
+    float: left;
+    width: 50%;
+  }
+
+  #searchFlight-list-item20{
+    float: right;
+    width: 50%;
+  }
+
+  #searchFlight-list-item37{
+    float: left;
+    width: 50%;
+  }
+
+  #searchFlight-list-item38{
+    float: right;
+    width: 50%;
+  }
+</style>
+
 <ion-view title="Search Flight" id="page6">
   <ion-content padding="true" class="has-header">
     <ion-list id="searchFlight-list6">
