--- a/www/templates/book.html
+++ b/www/templates/book.html
@@ -1,13 +1,12 @@
 <style>
-  #book-select5{
+  #startdate{
     float: left;
     width: 50%;
   } 
-  #book-select6{
+  #enddate{
     float: right;
     width: 50%;
-  } 
-
+  }
 </style>
 <ion-view title="Book" id="page2">
   <ion-content padding="true" class="has-header">
@@ -27,14 +26,16 @@
       <div id="book-container1">
         <form id="book-form16" class="list">
           <div>
-            <label class="item item-select" id="book-select5">
+            <!--<label class="item item-select" id="book-select5">
               <span class="input-label">Startpoint</span>
               <select></select>
             </label>
             <label class="item item-select" id="book-select6">
               <span class="input-label">Endpoint</span>
               <select></select>
-            </label>  
+            </label>  -->
+            <ion-item id="startdate">Start</ion-item>
+            <ion-item id="enddate">End</ion-item>
           </div>
             <label class="item item-select" id="book-select2" name="book-passengers">
             <span class="input-label">Passengers</span>
@@ -59,3 +60,9 @@
     <a ui-sref="searchFlight()" id="book-button1" class="button button-positive button-block">Search</a>
   </ion-content>
 </ion-view>
+<script>
+    $(document).ready(function(){
+        $("#startdate").datepicker();
+        $("#enddate").datepicker();
+    });
+</script>
