password, aquela cena do monteiro, reordenacao das tabs

--- a/www/templates/alterarPalavraPasse.html
+++ b/www/templates/alterarPalavraPasse.html
@@ -1,5 +1,5 @@
 <ion-view title="Alterar Palavra-Passe" id="page8">
-  <ion-content padding="true" class="has-header">
+  <ion-content padding="true" class="has-header" style="text-align: center">
     <form id="alterarPalavraPasse-form12" class="list">
       <label class="item item-input" id="alterarPalavraPasse-input9">
         <input type="password" placeholder="Palavra-Passe Antiga">
@@ -13,7 +13,22 @@
         <input type="password" placeholder="Confirmar Palavra-Passe">
       </label>
     </form>
-    <button id="alterarPalavraPasse-button8" class="button button-positive button-block">Alterar</button>
-    <a ui-sref="tabsController.profile()" id="alterarPalavraPasse-button9" class="button button-stable button-block">Cancelar</a>
+    <button id="alterarPalavraPasse-button8" class="button button-positive button-block" style=" margin-top:0px; margin-right: 3px;" onclick="confirm2()">Alterar</button>
+    <a ui-sref="tabsController.profile()" id="alterarPalavraPasse-button9" class="button button-stable button-block" style=" margin-top:0px; margin-left: 3px;border: 1px solid rgba(95, 93, 93, 0.111) " onclick="confirm()">Cancelar</a>
+    <p style="color:green; margin-bottom: 10px; display: none;" id="confirmation">Palavra-passe alterada com sucesso</p>
   </ion-content>
 </ion-view>
+<script>
+  function confirm() {
+    var x = document.getElementById("confirmation");
+    if (x.style.display==="none"){
+      x.style.display = "block";
+    } else{
+      x.style.display = "none";
+    }
+  }
+  function confirm2() {
+    var x = document.getElementById("confirmation");
+    x.style.display = "block";
+  }
+</script>
