--- a/www/templates/book.html
+++ b/www/templates/book.html
@@ -22,7 +22,7 @@
         <i class="icon ion-plane placeholder-icon"></i>
         <input type="search" placeholder="To">
       </label>
-      <ion-checkbox id="book-checkbox1">Round Trip</ion-checkbox>
+      <ion-checkbox class="checkbox-square" id="book-checkbox1" >Round Trip</ion-checkbox>
       <div id="book-container1">
         <form id="book-form16" class="list">
           <div>
