fixed passengers bar when enddate is hiden, now it remains 100% width

--- a/www/templates/book.html
+++ b/www/templates/book.html
@@ -7,6 +7,10 @@
     float: right;
     width: 50%;
   }
+
+  #book-select2{
+    width: 100%;
+  }
 </style>
 <ion-view title="Book" id="page2">
   <ion-content padding="true" class="has-header">
