se estiver logged out faz redirect, apaguei os titulos que estavam bugados, impedir de fazer go back

--- a/www/templates/alterarPalavraPasse.html
+++ b/www/templates/alterarPalavraPasse.html
@@ -1,4 +1,4 @@
-<ion-view title="Alterar Palavra-Passe" id="page8">
+<ion-view id="page8">
   <ion-content padding="true" class="has-header" style="text-align: center">
     <form id="alterarPalavraPasse-form12" class="list">
       <label class="item item-input" id="alterarPalavraPasse-input9">
