--- a/www/templates/criarConta.html
+++ b/www/templates/criarConta.html
@@ -1,4 +1,4 @@
-<ion-view title="Criar Conta" id="page9">
+<ion-view id="page9">
   <ion-content padding="true" class="has-header">
     <div>
       <img src="img/UMMpakspRaa182wQN8wj_logo.png" style="display: block; width: 100%; height: auto; margin-left: auto; margin-right: auto;">
