--- a/www/templates/favorites.html
+++ b/www/templates/favorites.html
@@ -17,7 +17,7 @@
 }
 
 </style>
-<ion-view title="Favorites" id="page7">
+<ion-view id="page7">
   <ion-content padding="true" class="has-header">
     <div id="favorites-button-bar2" class="button-bar">
       <a ui-sref="tabsController.myFlights()" id="favorites-button11" class="button button-stable button-small button-block">Visited</a>
