--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view title="Login" id="page10">
+<ion-view id="page10">
   <ion-content padding="true" class="has-header">
     <h2 id="login-heading9" style="color:#000000;text-align:center;">Login</h2>
     <form id="login-form10" class="list">
