--- a/www/templates/myFlights.html
+++ b/www/templates/myFlights.html
@@ -1,4 +1,4 @@
-<ion-view title="My Flights" id="page4">
+<ion-view id="page4">
   <ion-content padding="true" class="has-header">
     <div id="myFlights-button-bar1" class="button-bar">
       <button id="myFlights-button5" class="button button-stable button-small button-block">Visited</button>
