--- a/www/templates/searchAndExplore.html
+++ b/www/templates/searchAndExplore.html
@@ -1,4 +1,4 @@
-<ion-view title="Search and Explore" id="page3">
+<ion-view id="page3">
   <ion-content padding="true" class="has-header">
     <form id="searchAndExplore-form1" class="list">
       <label class="item item-input" id="searchAndExplore-search1" name="search-locations">
