--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -20,7 +20,7 @@
   }
 </style>
 
-<ion-view title="Search Flight" id="page6">
+<ion-view id="page6">
   <ion-content padding="true" class="has-header">
     <ion-list id="searchFlight-list6">
       <ion-item class="item-icon-left" id="searchFlight-list-item19">
