changed to english and started input on profile page

--- a/www/templates/criarConta.html
+++ b/www/templates/criarConta.html
@@ -6,30 +6,27 @@
     <h3 id="criarConta-heading11" style="color:#000000;"></h3>
     <form id="criarConta-form14" class="list">
       <label class="item item-input" id="criarConta-input13">
-        <input type="text" placeholder="Nome" id="fname">
+        <input type="text" placeholder="Name" id="fname">
       </label>
       <label class="item item-input" id="criarConta-input14">
-        <input type="text" placeholder="Apelido" id="lname">
+        <input type="text" placeholder="Last Name" id="lname">
       </label>
       <label class="item item-input" id="criarConta-input19">
-        <input type="number" placeholder="Telemóvel" id="phone">
+        <input type="number" placeholder="Phone" id="phone">
       </label>
       <label class="item item-input" id="criarConta-input15">
         <input type="email" placeholder="Email" id="email">
       </label>
-      <label class="item item-input" id="criarConta-input18">
-        <input type="text" placeholder="Aeroporto Predefinido">
-      </label>
     </form>
     <form id="criarConta-form15" class="list">
       <label class="item item-input" id="criarConta-input16">
-        <input type="password" placeholder="Palavra-Passe" id="password">
+        <input type="password" placeholder="Password" id="password">
       </label>
       <label class="item item-input" id="criarConta-input17">
-        <input type="password" placeholder="Confirmar Palavra-Passe">
+        <input type="password" placeholder="Confirm Password">
       </label>
-      <button ui-sref="tabsController.login()" id="criarConta-button13" class="button button-positive button-block" onclick="register()">Criar Conta</button>
-      <button ui-sref="tabsController.login()" id="criarConta-button10" class="button button-stable button-block">Cancelar</button>
+      <button ui-sref="tabsController.login()" id="criarConta-button13" class="button button-positive button-block" onclick="register()">Create Account</button>
+      <button ui-sref="tabsController.login()" id="criarConta-button10" class="button button-stable button-block">Cancel</button>
     </form>
   </ion-content>
 </ion-view>
