--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,7 +6,7 @@
         <input type="text" placeholder="Email" id="email">
       </label>
       <label class="item item-input" id="login-input20">
-        <input type="password" placeholder="Palavra-Passe" id="password">
+        <input type="password" placeholder="Password" id="password">
       </label>
       <label style="font-size: 12px;">
         <ion-checkbox class="checkbox-square" id="login-checkbox2" style="border: 0cm; top: 5px;">Remember me?</ion-checkbox>
