--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -18,6 +18,11 @@
     float: right;
     width: 50%;
   }
+
+  #logo{
+    width: 20%;
+    height: auto;
+  }
 </style>
 
 <ion-view id="page6">
@@ -43,12 +48,12 @@
         </select>
       </label>
       <ion-item class="item-thumbnail-left" id="searchFlight-list-item45" ui-sref="tabsController.book_tab1()">
-        <img src="img/n9LsnCDREWZqcnFe8ViW_TAP_Portugal_Logo.svg.png">
-        <h2>Madeira, Portugal</h2>
+        <img id="logo" src="img/sata.png">
+        <h2 style="width: 100%;">Madeira, Portugal</h2>
         <p>Lisbon, Portugal</p>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="searchFlight-list-item46" ui-sref="tabsController.book_tab1()">
-        <img src="img/n9LsnCDREWZqcnFe8ViW_TAP_Portugal_Logo.svg.png">
+        <img id="logo" src="img/Transavia_logo.svg.png">
         <h2>Madeira, Portugal</h2>
         <p>Lisbon, Portugal</p>
       </ion-item>
