--- a/www/templates/myFlights.html
+++ b/www/templates/myFlights.html
@@ -15,7 +15,7 @@
     float: right;
     top: 8px;
     background-color: #007aff;
-    border: none;
+    border: 2px solid #007aff;
     border-radius: 8%;
     color: white;
     padding: 6px 14px;
